--- a/templates/projects/aloe/Aloe cleaning and EDA.ipynb
+++ b/templates/projects/aloe/Aloe cleaning and EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fec6ec5a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d75f53dc",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "10cf294e",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "be725f62-bc1e-4119-a513-5bfe94df9a1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Vide', 'Nutri-Pulpe 1000ml - 8.026.380.050.468',\n",
+       "       'Nutri-Pulpe 500ml - 8.026.380.050.475',\n",
+       "       'Nutri-Pulpe Pêche Blanche 1000ml - 8.026.380.050.482',\n",
+       "       'Nutri-Pulpe Pêche Blanche 500ml - 8.026.380.050.499',\n",
+       "       'Pur Gel Feuille 250ml - 8.026.380.050.505',\n",
+       "       'Pur Gel Flacon 100ml - 8.026.380.050.512',\n",
+       "       'Aloe-Oil Huile Réparatrice 50ml - 8.026.380.050.529',\n",
+       "       \"Cœur d'Aloe Cube\", 'Totem Double Face',\n",
+       "       'Pop-Up Coeur D’Aloe Cube Offre Consommateur',\n",
+       "       'Présentoir de Sol Gamme Aloe',\n",
+       "       'Grand Aloe Vera Cartonné de Linéaire ou Vitrine',\n",
+       "       'Brochure Gamme Aloe Vera', 'Echantillon Nutri-Pulpe',\n",
+       "       'Echantillon Pur Gel',\n",
+       "       'Echantillon Nutri-Pulpe Goût Pêche Blanche',\n",
+       "       'Aloe-Oil Crème Réparatrice 150ml - 8.026.380.050.536',\n",
+       "       'Présentoir de Comptoir Aloe-Oil',\n",
+       "       'Réglette De Linéaire Aloe Vera',\n",
+       "       'Présentoir de Comptoir Gamme Aloe', \"Cœur d'aloe cube\",\n",
+       "       'Réglette de linéaire Aloe Vera', 'Totem double face',\n",
+       "       'Grand aloe vera cartonné de linéaire ou vitrine',\n",
+       "       'Pur Gel Feuille - 250ml - 8.026.380.050.505',\n",
+       "       'Pur Gel Flacon - 100ml - 8.026.380.050.512',\n",
+       "       'Aloe-Oil Huile Réparatrice - 50ml - 8.026.380.050.529',\n",
+       "       'Aloe-Oil Crème Réparatrice - 150ml - 8.026.380.050.536',\n",
+       "       \"Pop-up cœur d'aloe cube offre consommateur\",\n",
+       "       'Pur gel feuille - 250ml', 'Pur gel flacon - 100ml',\n",
+       "       'Aloe-oil huile réparatrice - 50ml',\n",
+       "       'Aloe-oil crème réparatrice - 150ml',\n",
+       "       'Présentoir de comptoir Nutri-Pulpe & Pur Gel',\n",
+       "       'Présentoir de comptoir gamme Aloe-oil',\n",
+       "       'Brochure de gamme Aloe Vera consommateur',\n",
+       "       'Nutri-Pulpe - 1000ml - 8.026.380.050.468',\n",
+       "       'Nutri-Pulpe Pêche Blanche - 1000ml - 8.026.380.050.482',\n",
+       "       'Nutri-Pulpe Pêche Blanche - 500ml - 8.026.380.050.499',\n",
+       "       'Présentoir de Sol Aloe-Oil',\n",
+       "       'Echantillon Aloe-oil huile réparatrice',\n",
+       "       'Echantillon Aloe-oil crème réparatrice',\n",
+       "       'Nutri-Pulpe - 500ml - 8.026.380.050.475',\n",
+       "       'Aloe-Oil Huile Reparatrice 50ml - 8.026.380.050.529',\n",
+       "       'Nutri-pulpe goût pêche blanche - 500ml',\n",
+       "       'Echantillon Aloe-Oil Huile Réparatrice',\n",
+       "       'Echantillon Aloe-Oil Crème Réparatrice',\n",
+       "       'Aloe-Oil Creme Reparatrice 150ml - 8.026.380.050.536',\n",
+       "       'Reglette De Lineaire Aloe Vera',\n",
+       "       'Presentoir de Comptoir Gamme Aloe',\n",
+       "       'Grand Aloe Vera Cartonne de Lineaire ou Vitrine',\n",
+       "       'Echantillon Aloe-Oil Creme Reparatrice',\n",
+       "       'Echantillon Aloe-Oil Huile Reparatrice',\n",
+       "       'Gyn-Aloe Soin Lavant Flacon 250ml - 8.026.380.055.999',\n",
+       "       'Presentoir de Comptoir Aloe-Oil',\n",
+       "       'Echantillon Nutri-Pulpe goût pêche blanche',\n",
+       "       'Nutri-pulpe - 500ml', 'Présentoir de sol Nutri-Pulpe & Pur Gel',\n",
+       "       'UG Aloe-Oil Huile Réparatrice 50ml',\n",
+       "       'Pure Creme 400ml - 8.026.380.055.975', 'Echantillon Pure Creme',\n",
+       "       'Présentoir de comptoir ou d’étagère Gyn-Aloe',\n",
+       "       'Gyn-Aloe Soin Lavant Pompe 400ml - 8.026.380.055.982',\n",
+       "       'Echantillon Gyn-Aloe Soin Lavant',\n",
+       "       'Nutri-Pulpe Immunité 1000ml - 8.026.380.056.026',\n",
+       "       'Echantillon Nutri-Pulpe Immunité', 'Presentoir de Sol Gamme Aloe',\n",
+       "       'Presentoir de Sol Aloe-Oil',\n",
+       "       'Pure Crème 400ml - 8.026.380.055.975', 'Echantillon Pure Crème',\n",
+       "       'Basette Présentoir Gyn-Aloe',\n",
+       "       'Gyn-Aloe Soin Lavant - 250ml - 8.026.380.055.999',\n",
+       "       'Presentoir de comptoir ou d’etagere Gyn-Aloe',\n",
+       "       'Nutri-Pulpe Immunite 1000ml - 8.026.380.056.026',\n",
+       "       'Echantillon Nutri-Pulpe Immunite', 'UG Nutri-Aloe 1000ml',\n",
+       "       'UG Pur Gel Flacon 100ml', 'UG Pure Crème 400ml',\n",
+       "       'UG Gyn-Aloe Soin Lavant Pompe 400ml',\n",
+       "       'UG Gyn-Aloe Soin Lavant Flacon 250ml',\n",
+       "       'UG Nutri-Pulpe Immunité 1000ml',\n",
+       "       'UG Aloe-Oil Crème Réparatrice 150ml',\n",
+       "       'Pure Crème - 400ml - 8.026.380.055.975',\n",
+       "       'Gyn-Aloe Soin Lavant - 400ml - 8.026.380.055.982',\n",
+       "       'Nutri-Pulpe Immunité - 1000ml - 8.026.380.056.026',\n",
+       "       'Pur Gel Aloe Bio Pompe 300ml - 8.026.380.060.634',\n",
+       "       'Cyst-Aloe Sticks Flash 15x10ml - 8.026.380.059.775',\n",
+       "       'UG Pur Gel Feuille 250ml', 'UG Nutri-Aloe Pêche Blanche 1000ml',\n",
+       "       'UG Nutri-Aloe 500ml', 'UG Nutri-Aloe Pêche Blanche 500ml'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"article_name\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "521f8d43",
    "metadata": {
     "scrolled": true
@@ -105,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b3be92c6",
    "metadata": {},
    "outputs": [],
@@ -128,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ff0aeb1c",
    "metadata": {
     "scrolled": true
@@ -205,7 +304,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "a7550254",
    "metadata": {},
    "outputs": [],
@@ -230,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "e77184df",
    "metadata": {},
    "outputs": [],
@@ -246,6 +345,79 @@
     "        without_hyphen.append(v)\n",
     "    \n",
     "sales[\"article_name\"] = without_hyphen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "92f75a18-c68f-4195-851e-8bcd538d3e7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Vide', 'Nutri-pulpe 1000ml', 'Nutri-pulpe 500ml',\n",
+       "       'Nutri-pulpe Pêche Blanche 1000ml',\n",
+       "       'Nutri-pulpe Pêche Blanche 500ml', 'Pur Gel Feuille 250ml',\n",
+       "       'Pur Gel Flacon 100ml', 'Aloe-oil Huile Réparatrice 50ml',\n",
+       "       \"Cœur D'aloe Cube\", 'Totem Double Face',\n",
+       "       'Pop-up Coeur D’aloe Cube Offre Consommateur',\n",
+       "       'Présentoir De Sol Gamme Aloe',\n",
+       "       'Grand Aloe Vera Cartonné De Linéaire Ou Vitrine',\n",
+       "       'Brochure Gamme Aloe Vera', 'Echantillon Nutri-pulpe',\n",
+       "       'Echantillon Pur Gel',\n",
+       "       'Echantillon Nutri-pulpe Goût Pêche Blanche',\n",
+       "       'Aloe-oil Crème Réparatrice 150ml',\n",
+       "       'Présentoir De Comptoir Aloe-oil',\n",
+       "       'Réglette De Linéaire Aloe Vera',\n",
+       "       'Présentoir De Comptoir Gamme Aloe',\n",
+       "       \"Pop-up Cœur D'aloe Cube Offre Consommateur\",\n",
+       "       'Présentoir De Comptoir Nutri-pulpe & Pur Gel',\n",
+       "       'Présentoir De Comptoir Gamme Aloe-oil',\n",
+       "       'Brochure De Gamme Aloe Vera Consommateur',\n",
+       "       'Présentoir De Sol Aloe-oil',\n",
+       "       'Echantillon Aloe-oil Huile Réparatrice',\n",
+       "       'Echantillon Aloe-oil Crème Réparatrice',\n",
+       "       'Aloe-oil Huile Reparatrice 50ml',\n",
+       "       'Nutri-pulpe Goût Pêche Blanche 500ml',\n",
+       "       'Aloe-oil Creme Reparatrice 150ml',\n",
+       "       'Reglette De Lineaire Aloe Vera',\n",
+       "       'Presentoir De Comptoir Gamme Aloe',\n",
+       "       'Grand Aloe Vera Cartonne De Lineaire Ou Vitrine',\n",
+       "       'Echantillon Aloe-oil Creme Reparatrice',\n",
+       "       'Echantillon Aloe-oil Huile Reparatrice',\n",
+       "       'Gyn-aloe Soin Lavant Flacon 250ml',\n",
+       "       'Presentoir De Comptoir Aloe-oil',\n",
+       "       'Présentoir De Sol Nutri-pulpe & Pur Gel',\n",
+       "       'Ug Aloe-oil Huile Réparatrice 50ml', 'Pure Creme 400ml',\n",
+       "       'Echantillon Pure Creme',\n",
+       "       'Présentoir De Comptoir Ou D’étagère Gyn-aloe',\n",
+       "       'Gyn-aloe Soin Lavant Pompe 400ml',\n",
+       "       'Echantillon Gyn-aloe Soin Lavant', 'Nutri-pulpe Immunité 1000ml',\n",
+       "       'Echantillon Nutri-pulpe Immunité', 'Presentoir De Sol Gamme Aloe',\n",
+       "       'Presentoir De Sol Aloe-oil', 'Pure Crème 400ml',\n",
+       "       'Echantillon Pure Crème', 'Basette Présentoir Gyn-aloe',\n",
+       "       'Gyn-aloe Soin Lavant 250ml',\n",
+       "       'Presentoir De Comptoir Ou D’etagere Gyn-aloe',\n",
+       "       'Nutri-pulpe Immunite 1000ml', 'Echantillon Nutri-pulpe Immunite',\n",
+       "       'Ug Nutri-aloe 1000ml', 'Ug Pur Gel Flacon 100ml',\n",
+       "       'Ug Pure Crème 400ml', 'Ug Gyn-aloe Soin Lavant Pompe 400ml',\n",
+       "       'Ug Gyn-aloe Soin Lavant Flacon 250ml',\n",
+       "       'Ug Nutri-pulpe Immunité 1000ml',\n",
+       "       'Ug Aloe-oil Crème Réparatrice 150ml',\n",
+       "       'Gyn-aloe Soin Lavant 400ml', 'Pur Gel Aloe Bio Pompe 300ml',\n",
+       "       'Cyst-aloe Sticks Flash 15x10ml', 'Ug Pur Gel Feuille 250ml',\n",
+       "       'Ug Nutri-aloe Pêche Blanche 1000ml', 'Ug Nutri-aloe 500ml',\n",
+       "       'Ug Nutri-aloe Pêche Blanche 500ml'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales[\"article_name\"].unique()"
    ]
   },
   {
@@ -2824,9 +2996,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scoring",
    "language": "python",
-   "name": "python3"
+   "name": "scoring"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2838,7 +3010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
